<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.alice.tablelayout.MainActivity">

    <TableRow>
        <TextView
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/id"/>
        <TextView
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/name"/>
        <TextView
            android:layout_column="2"
            android:layout_gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/email"/>
        <TextView
            android:layout_column="3"
            android:layout_gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/address"/>
    </TableRow>
    <View
        android:layout_height="2dp"
        android:background="#0000FF"/>
    <TableRow>
        <TextView
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/linb"/>
        <TextView
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/lin"/>
        <TextView
            android:layout_column="2"
            android:layout_gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/em"/>
        <TextView
            android:layout_column="3"
            android:layout_gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/t"/>
    </TableRow>
</TableLayout>